--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	--primaryColor:rgb(104, 82, 237);
 	--secondaryColor:rgb(186, 67, 252);
 	--headingColor:rgb(85, 77, 137);
-	--textColor:rgb(113, 108, 128);
+	--textColor:rgb(91, 87, 102);
 	--badgeBackground:rgba(225, 228,237, 0.6);
 	--badgeText:rgb(239, 113, 113);
 	--whiteColor:#fff;
@@ -27,6 +27,48 @@
 	--boxShadow:0 0 20px 0 rgba(205, 208, 216);
 }
 
+*, *::before, *::after{
+	margin: 0;
+	box-sizing: border-box;
+}
+html{
+	font-size: 10px;
+}
+body{
+	line-height: 1.5;
+	font-family: var(--textFont);
+	color: var(--textColor);
+}
+h1, h2, h3, h3{
+	line-height: 1.2;
+	font-family: var(--headingFont);
+	color: var(--primaryColor);
+}
+h1{
+	font-size: 5rem;
+}
+h2{
+	font-size: 3.8rem;
+}
+h3{
+	font-size: 3rem;
+}
+p{
+	font-size: 2.2rem;
+}
 
 
-
+@media  screen and (min-width:768px) {
+	h1{
+		font-size: 4.5rem;
+	}
+	h2{
+		font-size: 3.2rem;
+	}
+	h3{
+		font-size: 2.5rem;
+	}
+	p{
+		font-size: 1.8rem;
+	}
+}
