build button component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -8,3 +8,12 @@
 <a href="#" class="link">more info</a>
 
 <!-- button component -->
+<a href="#" class="btn btn--outline">login</a>
+<a href="#" class="btn btn--outline">create account</a>
+<a href="#" class="btn btn--gradient">contact us</a>
+<a href="#" class="btn btn--gradient">get started</a>
+<a href="#" class="btn btn--gradient">view prices</a>
+<a href="#" class="btn btn--gradient">all services</a>
+<a href="#" class="btn btn--gradient">we are in the press</a>
+<a href="#" class="btn btn--outline">contact us</a>
+<button class="btn btn--gradient">getting started</button>
