--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,37 @@ p{
 	margin-left: 1.5rem;
 }
 
+/* button */
+.btn{
+	border: none;
+	background: transparent;
+	text-decoration: none;
+	text-transform: capitalize;
+	letter-spacing: 1.5px;
+	font: inherit;
+	font-size: 1.8rem;
+	font-weight: 700;
+	padding: 1rem 2rem;
+	border-radius: 100px;
+	cursor: pointer;
+}
+.btn--outline{
+	border: 2px solid var(--primaryColor);
+	color: var(--primaryColor);
+}
+.btn--outline:hover{
+	background: var(--primaryColor);
+	color: #fff;
+}
+.btn--gradient{
+	border: 2px solid var(--gradientElement);
+	background: var(--gradientElement);
+	color: #fff;
+}
+.btn--gradient:hover{
+	background: var(--primaryColor);
+}
+
 @media screen and (min-width:600px) {
 	.flex--phone{
 		flex-direction: row;
