build action component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -17,3 +17,22 @@
 <a href="#" class="btn btn--gradient">we are in the press</a>
 <a href="#" class="btn btn--outline">contact us</a>
 <button class="btn btn--gradient">getting started</button>
+
+<!-- action -->
+<div class="action">
+  <a href="#" class="btn btn--gradient">contact us</a>
+  <a href="#" class="link">order similar</a>
+</div>
+<div class="action">
+  <a href="#" class="btn btn--gradient">get started</a>
+  <a href="#" class="link">read more</a>
+</div>
+<div class="action">
+  <a href="#" class="btn btn--gradient">view prices</a>
+  <a href="#" class="link">more info</a>
+</div>
+<div class="action">
+  <a href="#" class="btn btn--outline">login</a>
+  <span class="or">or</span>
+  <a href="#" class="btn btn--outline">create account</a>
+</div>
