--- a/components/uikit.html
+++ b/components/uikit.html
@@ -36,3 +36,14 @@
   <span class="or">or</span>
   <a href="#" class="btn btn--outline">create account</a>
 </div>
+
+<!-- circle -->
+<span class="circle circle--primary circle--small"></span>
+<span class="circle circle--secondary circle--medium"></span>
+<span class="circle circle--primary circle--big"></span>
+<span class="circle circle--medium circle--gradient"
+  ><span class="play"></span
+></span>
+<span class="circle circle--big circle--primary"
+  ><span class="down">&darr;</span></span
+>
