build icon component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -47,3 +47,13 @@
 <span class="circle circle--big circle--primary"
   ><span class="down">&darr;</span></span
 >
+
+<!-- icon -->
+<span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
+<span class="icon"><i class="fa-solid fa-headset"></i></span>
+<span class="icon icon--white"><i class="fa-solid fa-headset"></i></span>
+<span class="icon"><i class="fa-solid fa-question"></i></span>
+<span class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></span>
+<span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+<span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
+<span class="icon icon--gray"><i class="fa-solid fa-phone"></i></span>
