build input component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -57,3 +57,11 @@
 <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
 <span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
 <span class="icon icon--gray"><i class="fa-solid fa-phone"></i></span>
+
+<!-- input -->
+<input
+  aria-label="Email"
+  type="email"
+  class="input"
+  placeholder="Enter your email"
+/>
