--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,14 @@ p{
 	color: var(--primaryColor);
 }
 
+/* input */
+.input{
+	font: inherit;
+	letter-spacing: 1.5px;
+	border: none;
+	outline: none;
+	font-size: 1.6rem;
+}
 
 @media screen and (min-width:600px) {
 	.flex--phone{
