build input group component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -65,3 +65,14 @@
   class="input"
   placeholder="Enter your email"
 />
+
+<!-- input group -->
+<div class="input-group flex">
+  <input
+    aria-label="Email"
+    type="email"
+    class="input"
+    placeholder="Enter your email"
+  />
+  <span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
+</div>
