--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,24 @@ p{
 	letter-spacing: 1.5px;
 	border: none;
 	outline: none;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
+	color: var(--textColor);
+}
+
+/* input group */
+.input-group{
+	align-items: center;
+	justify-content: space-between;
+	padding: 1.5rem 2rem;
+	border: 2px solid var(--primaryColor);
+	border-radius: var(--bigRadius);
+}
+.input-group .input{
+	flex-grow: 1;
+	margin-right: 2.5rem;
+}
+.input-group .icon{
+	font-size: 1.8rem;
 }
 
 @media screen and (min-width:600px) {
