build media element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -51,7 +51,7 @@
 <!-- icon -->
 <span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
 <span class="icon"><i class="fa-solid fa-headset"></i></span>
-<span class="icon icon--white"><i class="fa-solid fa-headset"></i></span>
+<span class="icon"><i class="fa-solid fa-headset"></i></span>
 <span class="icon"><i class="fa-solid fa-question"></i></span>
 <span class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></span>
 <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
@@ -75,4 +75,87 @@
     placeholder="Enter your email"
   />
   <span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
+</div>
+
+<!-- media element -->
+<div class="media media--row">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-headset"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">looking for support</h3>
+    <p class="media__desc">
+      On the other hand, we denounce with righteous dislike so men who are
+      beguiled indidgnation and they foresee
+    </p>
+    <a href="#" class="link media__link">read more</a>
+  </div>
+</div>
+<div class="media media--row">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-question"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">view common questions</h3>
+    <p class="media__desc">
+      Et harum quidem rerum facilies est et expedita destinctio. Nam libero
+      tempore, cum soluta nobies est eligendi
+    </p>
+    <a href="#" class="link media__link">read more</a>
+  </div>
+</div>
+<div class="media media--column">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">sales &amp; trade</h3>
+    <p class="media__desc">
+      Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi ...
+    </p>
+  </div>
+</div>
+<div class="media media--column">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">audit &amp; evaluation</h3>
+    <p class="media__desc">
+      Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi ...
+    </p>
+  </div>
+</div>
+<div class="media media--column">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">audit &amp; evaluation</h3>
+    <p class="media__desc">
+      bring to the table win-win survival strategies to ensure proactive
+    </p>
+  </div>
+</div>
+<div class="media media--column">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">corporate finance</h3>
+    <p class="media__desc">
+      Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi ...
+    </p>
+  </div>
+</div>
+<div class="media media--column">
+  <div class="media__img">
+    <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+  </div>
+  <div class="media__content">
+    <h3 class="media__heading">corporate finance</h3>
+    <p class="media__desc">
+      leverage agile frameworks to provide a robust synopsis
+    </p>
+  </div>
 </div>
