build content element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -159,3 +159,80 @@
     </p>
   </div>
 </div>
+
+<!-- content element -->
+<div class="content content--big">
+  <h1 class="content__heading">realize your full potential</h1>
+  <p class="content__desc">
+    we help our clients make realize thier most important business goals
+  </p>
+  <div class="action content__action">
+    <a href="#" class="btn btn--gradient">contact us</a>
+    <a href="#" class="link">order similar</a>
+  </div>
+</div>
+<br />
+<div class="content content--small">
+  <h3 class="content__heading">market analysis</h3>
+  <p class="content__desc">
+    Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+  </p>
+  <a href="#" class="link content__link">read more</a>
+</div>
+<br />
+<div class="content content--big">
+  <h2 class="content__heading">
+    get the ultimate tool and learn how to grow your audience
+  </h2>
+  <p class="content__desc">
+    At vero eos accusamus et iusto odio dignissimos ducimos qui blanditiis
+    praesentium voluptatum deleniti atque. Many desktop publishing packages and
+    web
+  </p>
+  <div class="action content__action">
+    <a href="#" class="btn btn--gradient">get started</a>
+    <a href="#" class="link">read more</a>
+  </div>
+</div>
+<br />
+<div class="content content--big">
+  <h2 class="content__heading">
+    we offer a full range of digital marketing services
+  </h2>
+  <p class="content__desc">
+    latin words, combined with a handful of model sentence structures, to
+    generate Lorem ipsum which looks reasonable. The generated Lorem ipsum is
+    therefore always free
+  </p>
+  <div class="action content__action">
+    <a href="#" class="btn btn--gradient">view prices</a>
+    <a href="#" class="link">more info</a>
+  </div>
+</div>
+<br />
+<div class="content content--small">
+  <h3 class="content__heading">market analysis</h3>
+  <p class="content__desc">
+    Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+  </p>
+  <a href="#" class="link content__link">read more</a>
+</div>
+<br />
+<div class="content content--big">
+  <h2 class="content__heading">get a solutions to your businesses</h2>
+  <p class="content__desc">
+    our consultants help address your most challenging isssues by providing
+    strategic, financial operational, and IT services.
+  </p>
+  <a href="#" class="btn btn--gradient content__btn">all services</a>
+</div>
+<br />
+<div class="content content--big">
+  <h2 class="content__heading">our skills &amp; expertise</h2>
+  <p class="content__desc">
+    we help company set up business strategy including design brand identity or
+    product design service. So company can focus on their core business. Morbi
+    accumsan ipsumm velit. Nam nec tellus
+  </p>
+  <a href="#" class="btn btn--gradient content__btn">we are in the press</a>
+</div>
