build card element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -236,3 +236,99 @@
   </p>
   <a href="#" class="btn btn--gradient content__btn">we are in the press</a>
 </div>
+
+<!-- card element -->
+<div class="card card--white">
+  <div class="media media--column">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">corporate finance</h3>
+      <p class="media__desc">
+        Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+        ...
+      </p>
+    </div>
+  </div>
+</div>
+<br />
+<div class="card card--white">
+  <div class="media media--column">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">audit &amp; evaluation</h3>
+      <p class="media__desc">
+        Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+        ...
+      </p>
+    </div>
+  </div>
+</div>
+<br />
+<div class="card card--gradient">
+  <div class="content content--small">
+    <h3 class="content__heading">market analysis</h3>
+    <p class="content__desc">
+      Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+    </p>
+    <a href="#" class="link content__link">read more</a>
+  </div>
+</div>
+<br />
+<div class="card card--white">
+  <div class="media media--column">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">corporate finance</h3>
+      <p class="media__desc">
+        Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+        ...
+      </p>
+    </div>
+  </div>
+</div>
+<br />
+<div class="card card--white">
+  <div class="media media--column">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">audit &amp; evaluation</h3>
+      <p class="media__desc">
+        Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+        ...
+      </p>
+    </div>
+  </div>
+</div>
+<br />
+<div class="card card--gradient">
+  <div class="content content--small">
+    <h3 class="content__heading">market analysis</h3>
+    <p class="content__desc">
+      Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+    </p>
+    <a href="#" class="link content__link">read more</a>
+  </div>
+</div>
+<br />
+<div class="card card--white">
+  <div class="media media--column">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">sales &amp; trade</h3>
+      <p class="media__desc">
+        Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+        ...
+      </p>
+    </div>
+  </div>
+</div>
