--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,24 @@ p{
 	margin: 2.8rem 0 2.9rem;
 }
 
+/* range */
+.range{
+	width: 100%;
+	height: 10px;
+	background: var(--badgeBackground);
+	position: relative;
+	border-radius: var(--bigRadius);
+}
+.range::after{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: var(--bigRadius);
+	height: 100%;
+	background: var(--primaryColor);
+}
+
 @media screen and (min-width:600px) {
 	.flex--phone{
 		flex-direction: row;
