build ranbox element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -335,3 +335,33 @@
 
 <!-- range -->
 <div class="range"></div>
+
+<!-- rangebox element -->
+<div class="rangebox brand">
+  <div class="rangebox__text flex">
+    <span class="type">branding</span>
+    <span class="percent">96%</span>
+  </div>
+  <div class="range"></div>
+</div>
+<div class="rangebox design">
+  <div class="rangebox__text flex">
+    <span class="type">design &amp; development</span>
+    <span class="percent">81%</span>
+  </div>
+  <div class="range"></div>
+</div>
+<div class="rangebox pr">
+  <div class="rangebox__text flex">
+    <span class="type">PR &amp; marketing</span>
+    <span class="percent">90%</span>
+  </div>
+  <div class="range"></div>
+</div>
+<div class="rangebox ph">
+  <div class="rangebox__text flex">
+    <span class="type">PH &amp; marketing</span>
+    <span class="percent">88%</span>
+  </div>
+  <div class="range"></div>
+</div>
