--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,14 @@ p{
 	width: 88%;
 }
 
+/* divider */
+.divider{
+	width: 45px;
+	height: 3px;
+	border-radius: var(--smallRadius);
+	background: var(--secondaryColor);
+}
+
 @media screen and (min-width:600px) {
 	.flex--phone{
 		flex-direction: row;
