build money component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -368,3 +368,8 @@
 
 <!-- divider -->
 <div class="divider"></div>
+
+<!-- money -->
+<span class="money">15</span>
+<span class="money">37</span>
+<span class="money">42</span>
