--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,18 @@ p{
 	background: var(--secondaryColor);
 }
 
+/* money */
+.money{
+	font-size: 5rem;
+	font-weight: 700;
+	font-family:var(--headingFont);
+	color: var(--headingColor);
+	position: relative;
+}
+.money::after{
+	content: '$';
+}
+
 @media screen and (min-width:600px) {
 	.flex--phone{
 		flex-direction: row;
