build money element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -373,3 +373,9 @@
 <span class="money">15</span>
 <span class="money">37</span>
 <span class="money">42</span>
+
+<!-- moneybox element -->
+<div class="moneybox flex">
+  <span class="money">15</span>
+  <span class="month">per month</span>
+</div>
