--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ p{
 
 /* money */
 .money{
+	line-height: 1;
 	font-size: 5rem;
 	font-weight: 700;
 	font-family:var(--headingFont);
@@ -352,6 +353,19 @@ p{
 .money::after{
 	content: '$';
 }
+
+/* moneybox */
+.moneybox{
+	flex-direction: column;
+	width: max-content;
+}
+.moneybox .month{
+	font-size: 1.6rem;
+}
+.moneybox .month::first-letter{
+	text-transform: capitalize;
+}
+
 
 @media screen and (min-width:600px) {
 	.flex--phone{
