build list component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -1,11 +1,11 @@
-<!-- link component -->
-<a href="#" class="link">order similar</a>
-<a href="#" class="link">read more</a>
-<a href="#" class="link">read more</a>
-<a href="#" class="link">read more</a>
-<a href="#" class="link">read more</a>
-<a href="#" class="link">read more</a>
-<a href="#" class="link">more info</a>
+<!-- link link--arrow component -->
+<a href="#" class="link link--arrow">order similar</a>
+<a href="#" class="link link--arrow">read more</a>
+<a href="#" class="link link--arrow">read more</a>
+<a href="#" class="link link--arrow">read more</a>
+<a href="#" class="link link--arrow">read more</a>
+<a href="#" class="link link--arrow">read more</a>
+<a href="#" class="link link--arrow">more info</a>
 
 <!-- button component -->
 <a href="#" class="btn btn--outline">login</a>
@@ -21,15 +21,15 @@
 <!-- action -->
 <div class="action">
   <a href="#" class="btn btn--gradient">contact us</a>
-  <a href="#" class="link">order similar</a>
+  <a href="#" class="link link--arrow">order similar</a>
 </div>
 <div class="action">
   <a href="#" class="btn btn--gradient">get started</a>
-  <a href="#" class="link">read more</a>
+  <a href="#" class="link link--arrow">read more</a>
 </div>
 <div class="action">
   <a href="#" class="btn btn--gradient">view prices</a>
-  <a href="#" class="link">more info</a>
+  <a href="#" class="link link--arrow">more info</a>
 </div>
 <div class="action">
   <a href="#" class="btn btn--outline">login</a>
@@ -88,7 +88,7 @@
       On the other hand, we denounce with righteous dislike so men who are
       beguiled indidgnation and they foresee
     </p>
-    <a href="#" class="link media__link">read more</a>
+    <a href="#" class="link link--arrow media__link">read more</a>
   </div>
 </div>
 <div class="media media--row">
@@ -101,7 +101,7 @@
       Et harum quidem rerum facilies est et expedita destinctio. Nam libero
       tempore, cum soluta nobies est eligendi
     </p>
-    <a href="#" class="link media__link">read more</a>
+    <a href="#" class="link link--arrow media__link">read more</a>
   </div>
 </div>
 <div class="media media--column">
@@ -168,7 +168,7 @@
   </p>
   <div class="action content__action">
     <a href="#" class="btn btn--gradient">contact us</a>
-    <a href="#" class="link">order similar</a>
+    <a href="#" class="link link--arrow">order similar</a>
   </div>
 </div>
 <br />
@@ -177,7 +177,7 @@
   <p class="content__desc">
     Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
   </p>
-  <a href="#" class="link content__link">read more</a>
+  <a href="#" class="link link--arrow content__link link--arrow">read more</a>
 </div>
 <br />
 <div class="content content--big">
@@ -191,7 +191,7 @@
   </p>
   <div class="action content__action">
     <a href="#" class="btn btn--gradient">get started</a>
-    <a href="#" class="link">read more</a>
+    <a href="#" class="link link--arrow">read more</a>
   </div>
 </div>
 <br />
@@ -206,7 +206,7 @@
   </p>
   <div class="action content__action">
     <a href="#" class="btn btn--gradient">view prices</a>
-    <a href="#" class="link">more info</a>
+    <a href="#" class="link link--arrow">more info</a>
   </div>
 </div>
 <br />
@@ -215,7 +215,7 @@
   <p class="content__desc">
     Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
   </p>
-  <a href="#" class="link content__link">read more</a>
+  <a href="#" class="link link--arrow content__link">read more</a>
 </div>
 <br />
 <div class="content content--big">
@@ -274,7 +274,7 @@
     <p class="content__desc">
       Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
     </p>
-    <a href="#" class="link content__link">read more</a>
+    <a href="#" class="link link--arrow content__link">read more</a>
   </div>
 </div>
 <br />
@@ -314,7 +314,7 @@
     <p class="content__desc">
       Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
     </p>
-    <a href="#" class="link content__link">read more</a>
+    <a href="#" class="link link--arrow content__link">read more</a>
   </div>
 </div>
 <br />
