build best component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -395,3 +395,6 @@
   <li class="item"><a href="#" class="link link--tick">item</a></li>
   <li class="item"><a href="#" class="link link--saltire">item</a></li>
 </ul>
+
+<!-- best -->
+<h3 class="price__heading best">basic</h3>
