build price element component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -398,3 +398,89 @@
 
 <!-- best -->
 <h3 class="price__heading best">basic</h3>
+
+<!-- price card -->
+<div class="card price">
+  <header class="price__header">
+    <h3 class="price__heading best">basic</h3>
+    <div class="divider"></div>
+    <div class="moneybox flex">
+      <span class="money">15</span>
+      <span class="month">per month</span>
+    </div>
+  </header>
+  <ul class="list price__list">
+    <li class="item price__item">
+      <a href="#" class="link link--tick">free updates</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">custom domain</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">outstanding support</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--saltire">unlimited storage</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--saltire">build responsive website</a>
+    </li>
+  </ul>
+  <button class="btn btn--gradient price__btn">getting started</button>
+</div>
+<div class="card price">
+  <header class="price__header">
+    <h3 class="price__heading">standard</h3>
+    <div class="divider"></div>
+    <div class="moneybox flex">
+      <span class="money">37</span>
+      <span class="month">per month</span>
+    </div>
+  </header>
+  <ul class="list price__list">
+    <li class="item price__item">
+      <a href="#" class="link link--tick">free updates</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">custom domain</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">outstanding support</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">unlimited storage</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--saltire">build responsive website</a>
+    </li>
+  </ul>
+  <button class="btn btn--gradient price__btn">getting started</button>
+</div>
+<div class="card price">
+  <header class="price__header">
+    <h3 class="price__heading">advance</h3>
+    <div class="divider"></div>
+    <div class="moneybox flex">
+      <span class="money">42</span>
+      <span class="month">per month</span>
+    </div>
+  </header>
+  <ul class="list price__list">
+    <li class="item price__item">
+      <a href="#" class="link link--tick">free updates</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">custom domain</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">outstanding support</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">unlimited storage</a>
+    </li>
+    <li class="item price__item">
+      <a href="#" class="link link--tick">build responsive website</a>
+    </li>
+  </ul>
+  <button class="btn btn--gradient price__btn">getting started</button>
+</div>
