build call element

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -496,3 +496,14 @@
   </ul>
   <button class="btn btn--gradient price__btn">getting started</button>
 </div>
+
+<!-- call element -->
+<div class="call flex">
+  <span class="icon call__icon"><i class="fa-solid fa-headset"></i></span>
+  <p class="call__text">
+    <span class="question">Have questions?</span>
+    <a href="tel:+44141433433333" class="link call__number"
+      >+ 44 141 552 3000</a
+    >
+  </p>
+</div>
