--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,28 @@ p{
 	margin-bottom: 1rem;
 }
 
+/* call */
+.call{
+	align-items: center;
+	gap: 1.5rem;
+	color: var(--whiteColor);
+}
+.call__icon{
+	font-size: 4rem;
+	color: var(--whiteColor);
+}
+.call__text .question{
+	font-size: 1.1rem;
+	display: block;
+	line-height: 1;
+}
+.call__number{
+	font-weight: 700;
+	font-size: 2rem;
+	color: var(--whiteColor);
+	line-height: 1;
+}
+
 @media screen and (min-width:600px) {
 	.flex--phone{
 		flex-direction: row;
