build contact element

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -507,3 +507,26 @@
     >
   </p>
 </div>
+
+<!-- contact element -->
+<div class="contact">
+  <h3 class="contact__heading">Contacts</h3>
+  <address class="contact__address">
+    <div class="call flex">
+      <span class="icon call__icon"><i class="fa-solid fa-headset"></i></span>
+      <p class="call__text">
+        <span class="question">Have questions?</span>
+        <a href="tel:+44141433433333" class="link call__number"
+          >+ 44 141 552 3000</a
+        >
+      </p>
+    </div>
+    <p class="location">
+      Address: 2 ST Gabriel Walk, London SE1 6FG, United Kingdom
+    </p>
+    <p class="email">
+      Email:
+      <a href="mailto:info@betria.com" class="link">info@betria.com</a>
+    </p>
+  </address>
+</div>
