build box component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -509,8 +509,8 @@
 </div>
 
 <!-- contact element -->
-<div class="contact">
-  <h3 class="contact__heading">Contacts</h3>
+<div class="box contact">
+  <h3 class="box__heading">Contacts</h3>
   <address class="contact__address">
     <div class="call flex">
       <span class="icon call__icon"><i class="fa-solid fa-headset"></i></span>
@@ -532,3 +532,19 @@
 </div>
 
 <!-- links element -->
+<div class=" box links">
+  <h3 class="box__heading">Links</h3>
+  <div class="links__container flex">
+    <ul class="list">
+      <li class="item"><a href="#" class="link">About company</a></li>
+      <li class="item"><a href="#" class="link">Our service</a></li>
+      <li class="item"><a href="#" class="link">Team members</a></li>
+      <li class="item"><a href="#" class="link">Portfolio</a></li>
+    </ul>
+    <ul class="list">
+      <li class="item"><a href="#" class="link">Pricing plans</a></li>
+      <li class="item"><a href="#" class="link">Testimonials</a></li>
+      <li class="item"><a href="#" class="link">Contacts</a></li>
+    </ul>
+  </div>
+</div>
