build subscribe component

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -532,7 +532,7 @@
 </div>
 
 <!-- links element -->
-<div class=" box links">
+<div class="box links">
   <h3 class="box__heading">Links</h3>
   <div class="links__container flex">
     <ul class="list">
@@ -547,4 +547,19 @@
       <li class="item"><a href="#" class="link">Contacts</a></li>
     </ul>
   </div>
+</div>
+
+<!-- subscribe -->
+<div class="box subscribe">
+  <h3 class="box__heading">Subscribe</h3>
+  <div class="input-group flex">
+    <input
+      aria-label="Email"
+      type="email"
+      class="input"
+      placeholder="Enter your email"
+    />
+    <span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
+  </div>
+  <p class="subscribe__text">Keep up to date with all new themes and updates</p>
 </div>
